added Datum class